# funcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
modules/basetypes/: README.md
modules/basetypes/include/basetypes/: unit.h
modules/io/: README.md
modules/io/include/io/: console.h  file_system.h  io.h  io_functor.h  io_monad.h  key_value_store.h  randomly_accessible.h  readable.h  rw_accessible.h  writable.h  write.h  writer.h
modules/io/src/: CMakeLists.txt  console.cpp  file_system.cpp
modules/io/test/: CMakeLists.txt
modules/io/test/src/io/: console.cpp  file_system.cpp  io.cpp  io_monad.cpp  key_value_store.cpp  randomly_accessible.cpp  readable.cpp  rw_accessible.cpp  writable.cpp  write.cpp
modules/mpl/: README.md
modules/mpl/include/mpl/: basetypes.h
modules/mpl/test/: CMakeLists.txt
modules/mpl/test/src/mpl/: basetypes.cpp
modules/playground/: CMakeLists.txt
modules/playground/src/: play1.cpp  resource_orchestration.cpp
modules/testsupport/include/testsupport/: static_checks.h
modules/typeclass/include/typeclass/: eq.h  eq_list.h  eq_primitive.h  functor.h  functor_list.h  functor_optional.h  functor_vector.h  monad.h  monad_free.h  monad_list.h  monoid.h  monoid_list.h  monoid_primitive.h  show.h
modules/typeclass/include/typeclass/eq/: list.h  optional.h  scalar.h  vector.h
modules/typeclass/include/typeclass/functor/: future.h  list.h  optional.h  vector.h
modules/typeclass/include/typeclass/monad/: future.h  list.h
modules/typeclass/include/typeclass/monoid/: list.h  scalar.h  vector.h
modules/typeclass/include/typeclass/show/: list.h  map.h  scalar.h  string.h  vector.h
modules/typeclass/include/utility/: global_instance.h
modules/typeclass/test/: CMakeLists.txt
modules/typeclass/test/src/typeclass/: eq.cpp  monad.cpp  show.cpp
tests/TestApp1/: CMakeLists.txt
tests/TestApp1/src/: main.cpp
tests/TestApp1/src/typeclass/: eq.cpp  functor.cpp  monad.cpp  monoid.cpp  show.cpp
